docs: update releases page

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -76,9 +76,9 @@ experiences.
     <StructuredListRow head>
       <StructuredListCell head>Carbon Design System</StructuredListCell>
       <StructuredListCell head>IBM Design Language</StructuredListCell>
-      <StructuredListCell head>@carbon/elements</StructuredListCell>
-      <StructuredListCell head>carbon-components</StructuredListCell>
-      <StructuredListCell head>carbon-components-react</StructuredListCell>
+      <StructuredListCell head>Carbon Elements</StructuredListCell>
+      <StructuredListCell head>Carbon Components</StructuredListCell>
+      <StructuredListCell head>Carbon React</StructuredListCell>
     </StructuredListRow>
   </StructuredListHead>
   <StructuredListBody>
@@ -86,12 +86,12 @@ experiences.
       <StructuredListCell>
         <strong>Carbon TBD</strong>
         <UnorderedList>
-          — GA: 2021 Q2
+          — 2021 Q2
           <br />
           — Improves token and prop naming
           <br />
-          — Adds inline color theming
-          <br />— Drops IE11 support
+          — Adds light/dark mode support
+          <br />— Uses CSS Grid
         </UnorderedList>
       </StructuredListCell>
       <StructuredListCell>
@@ -107,7 +107,7 @@ experiences.
           <strong>Carbon v10</strong>
         </Link>
         <UnorderedList>
-          — GA: 03/29/19
+          — 03/29/19
           <br />
           — Updates visuals to new design language
           <br />
@@ -139,7 +139,7 @@ experiences.
         <Link href="https://v9.carbondesignsystem.com">
           <strong>Carbon v9</strong>
         </Link>
-        <UnorderedList>— GA: 06/04/18</UnorderedList>
+        <UnorderedList>— 06/04/18</UnorderedList>
       </StructuredListCell>
       <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
@@ -159,7 +159,7 @@ experiences.
         <Link href="https://v8.carbondesignsystem.com">
           <strong>Carbon v8</strong>
         </Link>
-        <UnorderedList>— GA: 10/26/17</UnorderedList>
+        <UnorderedList>— 10/26/17</UnorderedList>
       </StructuredListCell>
       <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
@@ -179,7 +179,7 @@ experiences.
         <Link href="https://v7.carbondesignsystem.com">
           <strong>Carbon v7</strong>
         </Link>
-        <UnorderedList>— GA: 03/30/17</UnorderedList>
+        <UnorderedList>— 03/30/17</UnorderedList>
       </StructuredListCell>
       <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
