docs: use v11, add article cards

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -54,13 +54,27 @@ necessary, patch releases between minor versions to address bugs. Read more in
 Carbon's
 [release radar](https://github.com/carbon-design-system/carbon/wiki/Release-radar).
 
-### Carbon TBD
+### Carbon v11
 
-Carbon TBD uses newer browser capabilities and includes quality of life updates
+Carbon v11 uses newer browser capabilities and includes quality of life updates
 for improved designer and developer experiences. As v2 of the IBM Design
-Language is still current, Carbon TBD will not require brand-driven product
-redesigns. Read more about the upcoming
-[Carbon TBD release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
+Language is still current, Carbon v11 will not require brand-driven product
+redesigns. Read more:
+
+<Row>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="What’s coming to Carbon in 2021"
+    author="Josh Black"
+    date="November 12, 2020"
+    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
+    >
+
+![Carbon 2021 release](../news-and-articles/images/carbon_2021.png)
+
+</ArticleCard>
+</Column>
+</Row>
 
 ### Carbon v10
 
@@ -84,7 +98,7 @@ experiences.
   <StructuredListBody>
     <StructuredListRow>
       <StructuredListCell>
-        <strong>Carbon TBD</strong>
+        <strong>Carbon v11</strong>
         <UnorderedList>
           — 2021 Q2
           <br />
