docs: update om to pm

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -129,7 +129,7 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
 </Profile>
-<Profile name="Linda Carotenuto" title="Offering Manager, Digital Design Squad, Carbon for IBM.com">
+<Profile name="Linda Carotenuto" title="Product Manager, Digital Design Squad, Carbon for IBM.com">
 
 ![Linda Carotenuto headshot](/images/team/carotenuto_linda.png)
 
@@ -154,7 +154,7 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Tessa Rodes headshot](/images/team/rodes_tessa.png)
 
 </Profile>
-<Profile name="Matt Rosno" title="Offering Manager, Carbon">
+<Profile name="Matt Rosno" title="Product Manager, Carbon">
 
 ![Matt Rosno headshot](/images/team/rosno_matt.png)
 
