--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -103,7 +103,7 @@ and successful in designing digital experiences and products.
 ![Lauren Rice headshot](/images/team/rice_lauren.png)
 
 </Profile>
-<Profile name="Matt Rosno" title="Offering Manager">
+<Profile name="Matt Rosno" title="Product Manager">
 
 ![Matt Rosno headshot](/images/team/rosno_matt.png)
 
