update(button): add info on large-expressive

--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -187,9 +187,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Button text should be set in sentence case, with only the first word in a phrase
 and any proper nouns capitalized.
 
-| Class      | Font-size (px/rem) | Font-weight   | Type style       |
-| ---------- | ------------------ | ------------- | ---------------- |
-| `.bx--btn` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Class          | Font-size (px/rem) | Font-weight   | Type style       |
+| -------------- | ------------------ | ------------- | ---------------- |
+| `.bx--btn`     | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| `.bx--btn--lg` | 16 / 1             | Regular / 400 | `$body-short-02` |
 
 ## Structure
 
@@ -209,6 +210,7 @@ more buttons with glyphs appear together.
 | `.bx--btn--ghost` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 | `.bx--btn__icon`  | margin-left, margin-right   | 16 / 1   | `$spacing-05` |
 | `svg`             | size                        | 16 x 16  | –             |
+| `svg--expressive` | size                        | 20 x 20  | –             |
 | `:focus`          | box-shadow: inset           | 1px      | –             |
 
 <Row>
@@ -237,12 +239,13 @@ There are three common button sizes: default, field, and small. Each button type
 can use any of these three sizes based on need. The fourth button size, full
 bleed, has a more reserved application and should rarely be used.
 
-| Button size | Height (px / rem) | Use case                                                                           |
-| ----------- | ----------------- | ---------------------------------------------------------------------------------- |
-| Full bleed  | 64 / 4            | Use when buttons bleed to the edge of a component, like in side panels and modals. |
-| Default     | 48 / 3            | Use as primary page actions and other standalone actions.                          |
-| Field       | 40 / 2.5          | Use when buttons are paired with input fields.                                     |
-| Small       | 32 / 2            | Use when there is not enough vertical space for the default sized button.          |
+| Button size      | Height (px / rem) | Use case                                                                           |
+| ---------------- | ----------------- | ---------------------------------------------------------------------------------- |
+| Full bleed       | 64 / 4            | Use when buttons bleed to the edge of a component, like in side panels and modals. |
+| Default          | 48 / 3            | Use as primary page actions and other standalone actions.                          |
+| Field            | 40 / 2.5          | Use when buttons are paired with input fields.                                     |
+| Small            | 32 / 2            | Use when there is not enough vertical space for the default sized button.          |
+| Large expressive | 48 / 3            | (TBD)                                                                              |
 
 <Row>
 <Column colLg={8}>
