--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -221,17 +221,18 @@ size.
 <Row>
 <Column colLg={8}>
 
-![Button sizes](images/button_usage_3.png)
+![Button sizes](images/button_usage_3-with-lgExp.png)
 
 </Column>
 </Row>
 
-| Name         | Height (px/rem) | Use Case                                                                                                                                                                                                                                                                           |
-| ------------ | --------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _Full bleed_ | 64/4            | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the [modal component](components/modal/usage)._ |
-| _Default_    | 48/3            | Use as primary page actions and other standalone actions.                                                                                                                                                                                                                          |
-| _Field_      | 40/2.5          | Use when buttons are paired with input fields.                                                                                                                                                                                                                                     |
-| _Small_      | 32/2            | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                                                 |
+| Name               | Height (px/rem) | Use Case                                                                                                                                                                                                                                                                           |
+| ------------------ | --------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Full bleed_       | 64/4            | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the [modal component](components/modal/usage)._ |
+| _Default_          | 48/3            | Use as primary page actions and other standalone actions.                                                                                                                                                                                                                          |
+| _Field_            | 40/2.5          | Use when buttons are paired with input fields.                                                                                                                                                                                                                                     |
+| _Small_            | 32/2            | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                                                 |
+| _Large expressive_ | 48/3            | Use when the body copy is 16px, or larger, such as in a marketing experience's lead space. This button works well with the expressive type set.                                                                                                                                    |
 
 ### Emphasis
 
@@ -610,7 +611,8 @@ Icons can be placed next to labels to both clarify an action and call attention
 to a button. There are certain instances where an icon will suffice in place of
 a text label, but use icon buttons cautiously.
 
-- Use glyphs (16px) within buttons
+- Use 16px glyphs within buttons; use 20px glyphs within the large expressive
+  buttons
 - Glyphs are distinguished by their solid shape and knocked-out details
 - Glyphs should always appear to the right of the text
 - Glyphs used in buttons must be directly related to the action that the user is
