--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -27,10 +27,12 @@ Level 1 and 2 of any list type should be set in bold and sentence case, with
 only the first word in a phrase and any proper noun capitalized. **Line height**
 for lists should be set at 24px / 1.5rem.
 
-| Class               | Font-size (px/rem) | Font-weight   | Type token       |
-| ------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--list__item`   | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--list--nested` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Class                   | Font-size (px/rem) | Font-weight   | Type token       |
+| ----------------------- | ------------------ | ------------- | ---------------- |
+| `.bx--list__item`       | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| `.bx--list--nested`     | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| `.bx--list--lg--item`   | 16 / 1             | Regular / 400 | `$body-short-02` |
+| `.bx--list--lg--nested` | 16 / 1             | Regular / 400 | `$body-short-02` |
 
 ## Structure
 
