docs: content guidelines on use of please

--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -275,12 +275,11 @@ TIP: Create a terminology list of words for your product that includes preferred
 words and words not to use. This simple tool can help with consistency over
 time, especially if multiple are writing copy.
 
-Respect the users' time and make things quick and easy to read. Always trim back
+Respect a user's time and make things quick and easy to read. Always trim back
 to as few words as possible, although don't be terse.
 
-Terms of politeness are superfluous, convey the wrong tone for technical
-material, and are not regarded the same way in all cultures. Use please in a UI
-only when the user is being inconvenienced.
+We recommend avoiding terms of politeness such as _please_ and _thank you_ in a
+UI as they can be inappropriate or offensive in some cultural contexts.
 
 ### Use simple present tense
 
