--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -56,176 +56,29 @@ Carbon's
 
 ### Carbon v11
 
-Carbon v11 uses newer browser capabilities and includes quality of life updates
-for improved designer and developer experiences. As v2 of the IBM Design
-Language is still current, Carbon v11 will not require brand-driven product
-redesigns. Read more:
-
-<Row>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="What’s coming to Carbon in 2021"
-    author="Josh Black"
-    date="November 12, 2020"
-    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
-    >
-
-![Carbon 2021 release](../news-and-articles/images/carbon_2021.png)
-
-</ArticleCard>
-</Column>
-</Row>
+Carbon v11 focuses on quality of life updates for designers and developers
+including token and prop renaming for ease of use, component API updates for a
+more predictable developer experience, and introducing CSS grid for accurate
+layout building in line with the design language. With no changes to the IBM
+Design Language, v11 will not require any brand-driven product redesigns and
+teams are free to update at their convenience.
 
 ### Carbon v10
 
-Carbon v10 is the digital expression of the IBM Design Language, v2. The updated
-components required some product redesigns, however they had a clearly
-identifiable IBMness and created a connective tissue between all product
-experiences.
+Carbon v10 implemented our newly updated IBM brand expression (Design Language
+v2) into our components. The updated components required product teams to
+redesign product UIs and begin a plan to migrate and/or adopt the new components
+to comply with IBM brand experience standards.
 
 ## Release history
 
-<StructuredListWrapper>
-  <StructuredListHead>
-    <StructuredListRow head>
-      <StructuredListCell head>Carbon Design System</StructuredListCell>
-      <StructuredListCell head>IBM Design Language</StructuredListCell>
-      <StructuredListCell head>Carbon Elements</StructuredListCell>
-      <StructuredListCell head>Carbon Components</StructuredListCell>
-      <StructuredListCell head>Carbon React</StructuredListCell>
-    </StructuredListRow>
-  </StructuredListHead>
-  <StructuredListBody>
-    <StructuredListRow>
-      <StructuredListCell>
-        <strong>Carbon v11</strong>
-        <UnorderedList>
-          — 2021 Q2
-          <br />
-          — Improves token and prop naming
-          <br />
-          — Adds light/dark mode support
-          <br />— Uses CSS Grid
-        </UnorderedList>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.ibm.com/design/language">IDL v2</Link>
-      </StructuredListCell>
-      <StructuredListCell>v11.x</StructuredListCell>
-      <StructuredListCell>v11.x</StructuredListCell>
-      <StructuredListCell>v8.x</StructuredListCell>
-    </StructuredListRow>
-    <StructuredListRow>
-      <StructuredListCell>
-        <Link href="https://www.carbondesignsystem.com">
-          <strong>Carbon v10</strong>
-        </Link>
-        <UnorderedList>
-          — 03/29/19
-          <br />
-          — Updates visuals to new design language
-          <br />
-          — Adds Carbon Elements package
-          <br />— Updates grid to 16 columns
-        </UnorderedList>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.ibm.com/design/language">IDL v2</Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/@carbon/elements/v/latest">
-          v10.x
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components/v/latest">
-          v10.x
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components-react/v/latest">
-          v7.x
-        </Link>
-      </StructuredListCell>
-    </StructuredListRow>
-    <StructuredListRow>
-      <StructuredListCell>
-        <Link href="https://v9.carbondesignsystem.com">
-          <strong>Carbon v9</strong>
-        </Link>
-        <UnorderedList>— 06/04/18</UnorderedList>
-      </StructuredListCell>
-      <StructuredListCell>IDL v1</StructuredListCell>
-      <StructuredListCell>—</StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components/v/9.x">
-          v9.x
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components-react/v/6.x">
-          v6.x
-        </Link>
-      </StructuredListCell>
-    </StructuredListRow>
-    <StructuredListRow>
-      <StructuredListCell>
-        <Link href="https://v8.carbondesignsystem.com">
-          <strong>Carbon v8</strong>
-        </Link>
-        <UnorderedList>— 10/26/17</UnorderedList>
-      </StructuredListCell>
-      <StructuredListCell>IDL v1</StructuredListCell>
-      <StructuredListCell>—</StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components/v/8.23.1">
-          v8.23.1
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components-react/v/5.x">
-          v5.x
-        </Link>
-      </StructuredListCell>
-    </StructuredListRow>
-    <StructuredListRow>
-      <StructuredListCell>
-        <Link href="https://v7.carbondesignsystem.com">
-          <strong>Carbon v7</strong>
-        </Link>
-        <UnorderedList>— 03/30/17</UnorderedList>
-      </StructuredListCell>
-      <StructuredListCell>IDL v1</StructuredListCell>
-      <StructuredListCell>—</StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components/v/7.26.10">
-          v7.26.10
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components-react/v/4.2.2">
-          v4.2.2
-        </Link>
-      </StructuredListCell>
-    </StructuredListRow>
-    <StructuredListRow>
-      <StructuredListCell>
-        <Link href="https://v6.carbondesignsystem.com">
-          <strong>Carbon v6</strong>
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>IDL v1</StructuredListCell>
-      <StructuredListCell>—</StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components/v/6.20.1">
-          v6.20.1
-        </Link>
-      </StructuredListCell>
-      <StructuredListCell>
-        <Link href="https://www.npmjs.com/package/carbon-components-react/v/3.14.0">
-          v3.14.0
-        </Link>
-      </StructuredListCell>
-    </StructuredListRow>
-  </StructuredListBody>
-</StructuredListWrapper>
+<!-- prettier-ignore-start -->
+| Carbon Design System | IBM Design Language | Carbon Elements | Carbon Components | Carbon React |
+| -------------------- | ------------------- | --------------- | ----------------- | ------------ |
+| <div>Carbon v11</div><div>— Q2 2021</div><div>— Improves token and prop naming</div><div>— Adds light/dark mode support</div><div>— Uses CSS grid</div> | [IDL v2](https://www.ibm.com/design/language) | v11.x | v11.x | v8.x |
+| <div>[Carbon v10](https://www.carbondesignsystem.com)</div><div>— 29 Mar 2019</div><div>— Updates assets to the new IDL v2</div><div>— Updates grid to 16 columns</div><div>— Adds Carbon Elements package</div> | [IDL v2](https://www.ibm.com/design/language) | [v10.x](https://www.npmjs.com/package/@carbon/elements/v/latest) | [v10.x](https://www.npmjs.com/package/carbon-components/v/latest) | [v7.x](https://www.npmjs.com/package/carbon-components-react/v/latest) |
+| <div>[Carbon v9](https://v9.carbondesignsystem.com)</div><div>— 4 June 2018</div> | IDL v1 | — | [v9.x](https://www.npmjs.com/package/carbon-components/v/9.x) | [v6.x](https://www.npmjs.com/package/carbon-components-react/v/6.x) |
+| <div>[Carbon v8](https://v8.carbondesignsystem.com)</div><div>— 26 Oct 2017</div> | IDL v1 | — | [v8.23.1](https://www.npmjs.com/package/carbon-components/v/8.23.1) | [v5.x](https://www.npmjs.com/package/carbon-components-react/v/5.x) |
+| <div>[Carbon v7](https://v7.carbondesignsystem.com)</div><div>— 30 Mar 2017</div> | IDL v1 | — | [v7.26.10](https://www.npmjs.com/package/carbon-components/v/7.26.10) | [v4.2.2](https://www.npmjs.com/package/carbon-components-react/v/4.2.2) |
+| <div>[Carbon v6](https://v6.carbondesignsystem.com)</div> | IDL v1 | — | [v6.20.1](https://www.npmjs.com/package/carbon-components/v/6.20.1) | [v3.14.0](https://www.npmjs.com/package/carbon-components-react/v/3.14.0) |
+<!-- prettier-ignore-end -->
