change short to long

--- a/src/pages/components/list/style.mdx
+++ b/src/pages/components/list/style.mdx
@@ -31,8 +31,8 @@ for lists should be set at 24px / 1.5rem.
 | ----------------------- | ------------------ | ------------- | ---------------- |
 | `.bx--list__item`       | 14 / 0.875         | Regular / 400 | `$body-short-01` |
 | `.bx--list--nested`     | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--list--lg--item`   | 16 / 1             | Regular / 400 | `$body-short-02` |
-| `.bx--list--lg--nested` | 16 / 1             | Regular / 400 | `$body-short-02` |
+| `.bx--list--lg--item`   | 16 / 1             | Regular / 400 | `$body-long-02`  |
+| `.bx--list--lg--nested` | 16 / 1             | Regular / 400 | `$body-long-02`  |
 
 ## Structure
 
