--- a/src/pages/guidelines/typography/expressive.mdx
+++ b/src/pages/guidelines/typography/expressive.mdx
@@ -26,6 +26,8 @@ product vs. editorial designers (e.g. `$label-01` vs. `$caption-01`) — the
 supporting and body styles have the same values in both the Productive and
 Expressive sets.
 
+[TBD]
+
 <TypesetStyle breakpointControls={false} typesets="supportingStyle,body" />
 
 ## Fluid type sets
