docs: split paragraph in releases page

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -59,9 +59,11 @@ Carbon's
 Carbon v11 focuses on quality of life updates for designers and developers
 including token and prop renaming for ease of use, component API updates for a
 more predictable developer experience, and introducing CSS grid for accurate
-layout building in line with the design language. With no changes to the IBM
-Design Language, v11 will not require any brand-driven product redesigns and
-teams are free to update at their convenience.
+layout building in line with the design language.
+
+With no changes to the IBM Design Language, v11 will not require any
+brand-driven product redesigns and teams are free to update at their
+convenience.
 
 ### Carbon v10
 
