--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -69,7 +69,7 @@ convenience.
 
 Carbon v10 implemented our newly updated IBM brand expression (Design Language
 v2) into our components. The updated components required product teams to
-redesign product UIs and begin a plan to migrate and/or adopt the new components
+redesign product UIs and begin a migration plan
 to comply with IBM brand experience standards.
 
 ## Release history
