--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -67,7 +67,7 @@ convenience.
 
 ### Carbon v10
 
-Carbon v10 implemented our newly updated IBM brand expression (Design Language
+Carbon v10 implemented our newly-updated brand expression (IBM Design Language
 v2) into our components. The updated components required product teams to
 redesign product UIs and begin a migration plan
 to comply with IBM brand experience standards.
