--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -78,7 +78,7 @@ to comply with IBM brand experience standards.
 | Carbon Design System | IBM Design Language | Carbon Elements | Carbon Components | Carbon React |
 | -------------------- | ------------------- | --------------- | ----------------- | ------------ |
 | <div>Carbon v11</div><div>— Q2 2021</div><div>— Improves token and prop naming</div><div>— Adds light/dark mode support</div><div>— Uses CSS grid</div> | [IDL v2](https://www.ibm.com/design/language) | v11.x | v11.x | v8.x |
-| <div>[Carbon v10](https://www.carbondesignsystem.com)</div><div>— 29 Mar 2019</div><div>— Updates assets to the new IDL v2</div><div>— Updates grid to 16 columns</div><div>— Adds Carbon Elements package</div> | [IDL v2](https://www.ibm.com/design/language) | [v10.x](https://www.npmjs.com/package/@carbon/elements/v/latest) | [v10.x](https://www.npmjs.com/package/carbon-components/v/latest) | [v7.x](https://www.npmjs.com/package/carbon-components-react/v/latest) |
+| <div>[Carbon v10](https://www.carbondesignsystem.com)</div><div>— 29 Mar 2019</div><div>— Updates assets to IDL v2</div><div>— Updates grid to 16 columns</div><div>— Adds Carbon Elements package</div> | [IDL v2](https://www.ibm.com/design/language) | [v10.x](https://www.npmjs.com/package/@carbon/elements/v/latest) | [v10.x](https://www.npmjs.com/package/carbon-components/v/latest) | [v7.x](https://www.npmjs.com/package/carbon-components-react/v/latest) |
 | <div>[Carbon v9](https://v9.carbondesignsystem.com)</div><div>— 4 June 2018</div> | IDL v1 | — | [v9.x](https://www.npmjs.com/package/carbon-components/v/9.x) | [v6.x](https://www.npmjs.com/package/carbon-components-react/v/6.x) |
 | <div>[Carbon v8](https://v8.carbondesignsystem.com)</div><div>— 26 Oct 2017</div> | IDL v1 | — | [v8.23.1](https://www.npmjs.com/package/carbon-components/v/8.23.1) | [v5.x](https://www.npmjs.com/package/carbon-components-react/v/5.x) |
 | <div>[Carbon v7](https://v7.carbondesignsystem.com)</div><div>— 30 Mar 2017</div> | IDL v1 | — | [v7.26.10](https://www.npmjs.com/package/carbon-components/v/7.26.10) | [v4.2.2](https://www.npmjs.com/package/carbon-components-react/v/4.2.2) |
