--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -17,7 +17,7 @@ import {
 
 <PageDescription>
 
-Read about the latest updates and learn more about what the team has planned for
+Learn about our latest updates, our release history, and what the team has planned for 
 Carbon’s future.
 
 </PageDescription>
