--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Releases
 description:
-  Read about the latest updates and learn more about what the team has planned
+Learn about our latest updates, our release history, and what the team has planned 
   for Carbon’s future.
 ---
 
