docs: fix formatting errors in releases page

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: Releases
 description:
-Learn about our latest updates, our release history, and what the team has planned 
-  for Carbon’s future.
+  Learn about our latest updates, our release history, and what the team has
+  planned for Carbon’s future.
 ---
 
 import {
@@ -17,8 +17,8 @@ import {
 
 <PageDescription>
 
-Learn about our latest updates, our release history, and what the team has planned for 
-Carbon’s future.
+Learn about our latest updates, our release history, and what the team has
+planned for Carbon’s future.
 
 </PageDescription>
 
@@ -69,8 +69,8 @@ convenience.
 
 Carbon v10 implemented our newly-updated brand expression (IBM Design Language
 v2) into our components. The updated components required product teams to
-redesign product UIs and begin a migration plan
-to comply with IBM brand experience standards.
+redesign product UIs and begin a migration plan to comply with IBM brand
+experience standards.
 
 ## Release history
 
