--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -110,6 +110,6 @@ And be sure to sign up for the latest Carbon news at
 ### Learn about what we're doing
 
 You can find out about Carbon's latest changes and future plans on the
-[Changelog and roadmap](/whats-happening/changelog-and-roadmap) page.
+[Releases](/whats-happening/releases) page.
 
 If you have questions, here are all the ways to [contact us](/help/contact-us).
