comms: Medium article April 2021

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -128,6 +128,20 @@ building websites and user interfaces.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    color="dark"
+    title="Carbon's 2021 release: April update"
+    author="Josh Black"
+    date="April 22, 2021"
+    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
+    >
+
+![Carbon's 2021 release: April update](./homepage/images/carbon_2021-april-update.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
     color="dark"
     title="The new Gatsby theme Sketch kit has arrived!"
@@ -150,20 +164,6 @@ building websites and user interfaces.
     >
 
 ![Carbon 2021 release](./homepage/images/carbon_2021.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-
-<ArticleCard
-    color="dark"
-    title="Color palettes and accessibility features for data visualization"
-    author="Shixie Shi Trofimov"
-    date="October 5, 2020"
-    href="https://medium.com/carbondesign/color-palettes-and-accessibility-features-for-data-visualization-7869f4874fca"
-    >
-
-![Color palettes and accessibility for data viz](./homepage/images/2020_dataviz.png)
 
 </ArticleCard>
 </Column>
