--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -22,6 +22,18 @@ about design systems.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
+    title="Carbon's 2021 release: April update"
+    author="Josh Black"
+    date="April 22, 2021"
+    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
+    >
+
+![Carbon's 2021 release: April update](/images/carbon_2021-april-update.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
     title="The new Gatsby theme Sketch kit has arrived!"
     author="Diana Stanciulescu"
     date="April 1, 2021"
