--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -190,7 +190,7 @@ and any proper nouns capitalized.
 | Class          | Font-size (px/rem) | Font-weight   | Type style       |
 | -------------- | ------------------ | ------------- | ---------------- |
 | `.bx--btn`     | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--btn--lg` | 16 / 1             | Regular / 400 | `$body-short-02` |
+| `.bx--btn--expressive` | 16 / 1             | Regular / 400 | `$body-short-02` |
 
 ## Structure
 
