--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -210,7 +210,7 @@ more buttons with glyphs appear together.
 | `.bx--btn--ghost` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 | `.bx--btn__icon`  | margin-left, margin-right   | 16 / 1   | `$spacing-05` |
 | `svg`             | size                        | 16 x 16  | –             |
-| `svg--expressive` | size                        | 20 x 20  | –             |
+| `.bx--btn--expressive svg` | size                        | 20 x 20  | –             |
 | `:focus`          | box-shadow: inset           | 1px      | –             |
 
 <Row>
