update the team page members

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -113,6 +113,11 @@ and successful in designing digital experiences and products.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
+<Profile name="Eliad Moosavi" title="Senior Software Developer, Technical Lead">
+
+![Eliad Moosavi headshot](/images/team/moosavi_eliad.jpg)
+
+</Profile>
 <Profile name="Scott Strubberg" title="Front-end Developer">
 
 ![Scott Strubberg headshot](/images/team/strubberg_scott.png)
@@ -121,6 +126,36 @@ and successful in designing digital experiences and products.
 <Profile name="Andrew Wang" title="Software Developer">
 
 ![Andrew Wang headshot](/images/team/wang_andrew.png)
+
+</Profile>
+
+<Profile name="Dean Williams" title="Senior Development Manager">
+
+![Dean Williams headshot](/images/team/williams_dean.jpg)
+
+</Profile>
+
+<Profile name="Natasha Decoste" title="Software Developer">
+
+![Natasha Decoste headshot](/images/team/decoste_natasha.jpg)
+
+</Profile>
+
+<Profile name="Nina Li" title="Project Manager">
+
+![Nina Li headshot](/images/team/li_nina.jpg)
+
+</Profile>
+
+<Profile name="Cal Smith" title="Software Developer">
+
+![Cal Smith headshot](/images/team/smith_cal.png)
+
+</Profile>
+
+<Profile name="Zvonimir Fras" title="Staff Software Developer">
+
+![Zvonimir Fras headshot](/images/team/fras_zvonimir.jpg)
 
 </Profile>
 </Row>
