--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -147,7 +147,7 @@ and successful in designing digital experiences and products.
 
 </Profile>
 
-<Profile name="Cal Smith" title="Software Developer, Technical Lead">
+<Profile name="Cal Smith" title="Angular Technical Lead">
 
 ![Cal Smith headshot](/images/team/smith_cal.png)
 
